<resources>
    <string name="app_name">Eobee</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >User Name</item>
        <item >Favorites</item>
        <item >Terms of Use</item>
        <item >Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_hive</item>
        <item>@mipmap/ic_portrait</item>
        <item>@mipmap/ic_action_favorite</item>
        <item>@mipmap/ic_action_about</item>
        <item>@mipmap/ic_action_undo</item>
    </array>

    <string-array name="distances">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_instructions_1">Search providers within</string>
    <string name="search_instructions_2">miles of</string>
    <string name="search_instructions_3">Selected from a common procedure: </string>
    <string name="search">Search</string>
    <string name="motto">Medical Prices Revealed</string>
    <string name="motd">Just search for a medical procedure or prescription and see actual prices nearby</string>
</resources>
